autofocus name on edit ; avoid to save new empty record

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -75,7 +75,7 @@
       <div class="row mt-2">
         <div class="col-4 text-right">
           <label for="cred-name-box">
-            <b>Name</b>
+            <b>Service</b>
         </div>
         <div class="col">
           <input type="hidden" id="cred-guid" />
