--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -15,6 +15,9 @@
   <!-- Font-Awesome -->
   <link rel="stylesheet" href="bower_components/Font-Awesome/web-fonts-with-css/css/fontawesome-all.min.css">
 
+  <!-- https://leaverou.github.io/awesomplete/ -->
+  <link rel="stylesheet" href="bower_components/awesomplete/awesomplete.css">
+
   <!-- Site css -->
   <link rel="stylesheet" href="site.css">
 
@@ -240,6 +243,9 @@
 
   <!-- https://github.com/zenorocha/clipboard.js -->
   <script src="bower_components/clipboard/dist/clipboard.js"></script>
+
+  <!-- https://leaverou.github.io/awesomplete/ -->
+  <script src="bower_components/awesomplete/awesomplete.min.js"></script>
 
   <!-- https://github.com/devel0/js-util -->
   <script src="js-util.js"></script>
