password length feature

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -140,6 +140,8 @@
                 <i class="fas fa-clipboard"></i> Copy to clipboard</button>
               <button type="button" class="btn btn-primary mt-1" id='pwd-regen-btn'>
                 <i class="fas fa-recycle"></i> Regenerate</button>
+                Length:
+              <input type="text" id="cred-password-regen-length-box" style="width:50px" />
             </div>
           </div>
         </div>
