--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -133,7 +133,7 @@
             <div class="col">
               <input type="text" id="cred-pass-box" style="width:100%" />
             </div>
-          </div>
+          </div>          
           <div class="row">
             <div class="col">
               <button type="button" class="btn btn-primary mt-1 js-pwd-clip" data-clipboard-target="#cred-pass-box">
@@ -144,6 +144,22 @@
               <input type="text" id="cred-password-regen-length-box" style="width:50px" />
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Pin -->
+      <div class="row mt-2 js-pin-div collapse">
+        <div class="col-4 text-right">
+          <label>
+            <b>Pin</b>
+            <i class="fas fa-barcode ml-3"></i>
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <input type="text" id="cred-pin-box" style="width:100%" minlength="4" maxlength="4" />
+            </div>
+          </div>                    
         </div>
       </div>
 
