hidden username field

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -209,9 +209,9 @@
           <h2>Login</h2>
           <form id='login-form'>
             <div class="form-group">
-              <input type="hidden" id="login-username-box" value="admin"/>
+              <input type="text" name="username" value="admin" hidden/>
               <label for="login-password-box">Password</label>
-              <input type="password" class="form-control" id="login-password-box" placeholder="Password" />
+              <input type="password" class="form-control" id="login-password-box" name="password" placeholder="Password" />
             </div>
             <button type="submit" class="btn btn-primary mb-3">Store</button>
           </form>
