SecurityManager account with levels

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -163,6 +163,22 @@
         </div>
       </div>
 
+      <!-- Level -->
+      <div class="row mt-2 js-lvl-div">
+        <div class="col-4 text-right">
+          <label>
+            <b>Level</b>   
+            <i class="fas fa-shield-alt ml-3"></i>         
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <input type="number" id="cred-lvl-box" step="1" min="1" style="width:50px" />
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Notes -->
       <div class="row mt-2">
         <div class="col-4 text-right">
