pin by keyboard

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -148,7 +148,7 @@
       </div>
 
       <!-- Pin -->
-      <div class="row mt-2 js-pin-div collapse">
+      <div class="row mt-2 js-pin-div collapse">        
         <div class="col-4 text-right">
           <label>
             <b>Pin</b>
@@ -156,8 +156,8 @@
         </div>
         <div class="col">
           <div class="row">
-            <div class="col">
-              <input type="text" id="cred-pin-box" style="width:100%" minlength="4" maxlength="4" />
+            <div class="col">              
+              <input type="text" id="cred-pin-box" style="width:100%" minlength="4" maxlength="4" />              
             </div>
           </div>
         </div>
@@ -238,8 +238,9 @@
     <div class="container-fluid collapse js-part js-login">
       <div class="row">
         <div class="col">
+          <i><span class="collapse" id='pin-key-tip'>Hit TAB key to insert pin by keyboard</span></i></br>
           <label for="pin-box">Pin</label>
-          <label id="pin-mask"></label>
+          <label id="pin-mask"></label>          
         </div>
       </div>
       <div class="row">
