--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -131,9 +131,10 @@
         <div class="col">
           <div class="row">
             <div class="col">
-              <input type="text" id="cred-pass-box" class="collapse" style="width:70%" />
               <button class="btn btn-link j-btn-show-pwd">
-                <i class="fas fa-eye"></i><span class="ml-1" id='show-hide-pwd-msg'>Show</span></button>
+                <i class="fas fa-eye"></i><span id='show-hide-pwd-msg' class='ml-1'>Show</span>
+              </button>
+              <input type="text" id="cred-pass-box" class="ml-1 collapse" style="width:70%" />
             </div>
           </div>
           <div class="row">
