Login button to allow browsers such as firefox popup wallet to save login credential.

--- a/SecurityManagerClient/index.html
+++ b/SecurityManagerClient/index.html
@@ -231,6 +231,7 @@
               <input type="text" name="username" value="admin" hidden />
               <label for="login-password-box">Password</label>
               <input type="password" class="form-control" id="login-password-box" name="password" placeholder="Password" />
+              <button type="submit">Login</button>
             </div>
           </form>
         </div>
